# oh-hell

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
oh_hell/: __init__.py  __main__.py  benchmark.py  cards.py  cli.py  game.py  montecarlo.py  player.py  render.py  rules.py
tests/: test_benchmark.py  test_cards.py  test_game.py  test_montecarlo.py  test_render.py
